tests/toy/neg/000251_mutation.toylang
program a = { bool a do sleep; } .
